ajuste nav bar css refatoração metodos form.component.ts

--- a/front-end-gestao-veiculos/gestao-veiculos/src/app/veiculos/veiculo/form.component.html
+++ b/front-end-gestao-veiculos/gestao-veiculos/src/app/veiculos/veiculo/form.component.html
@@ -95,9 +95,16 @@
           >
             Adicionar
           </button>
-          <button mat-raised-button type="submit" title="resetar formulário">
-            Resetar
-          </button>
+          <div>
+            <button
+              mat-raised-button
+              type="button"
+              title="limpar formulário"
+              (click)="resetarFormulario()"
+            >
+              Limpar
+            </button>
+          </div>
         </div>
       </form>
     </mat-card-content>
